--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -5,19 +5,22 @@
   </div>
 
   <div class="jumbotron text-center">
+    <div class = "container">
+
+    </div>
+
     <p class="lead">
-      <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
-      Always a pleasure scaffolding your apps.
+  <ul class="list-group">
+    <li class="list-group-item" ng-repeat="card in main.allCards">
+        <img ng-src="assets/images/{{ card.logo }}" alt="{{ card.title }}">
+
+    </li>
+  </ul>
     </p>
-    <p class="animated infinite" ng-class="main.classAnimation">
-      <button type="button" class="btn btn-lg btn-success" ng-click="main.showToastr()">Splendid Toastr</button>
-    </p>
-    <p>
-      With ♥ thanks to the contributions of<acme-malarkey extra-values="['Yeoman', 'Gulp', 'Angular']"></acme-malarkey>
-    </p>
+
   </div>
 
-<!--   <div class="row">
+  <!-- <div class="row">
     <div class="col-sm-6 col-md-4" ng-repeat="awesomeThing in main.awesomeThings | orderBy:'rank'">
       <div class="thumbnail">
         <img class="pull-right" ng-src="assets/images/{{ awesomeThing.logo }}" alt="{{ awesomeThing.title }}">
@@ -28,6 +31,6 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
-</div>
+</div> -->
