Add user form validation

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -12,6 +12,8 @@
         <li><a ng-href="#">About</a></li>
         <li><a ng-href="#">Contact</a></li>
       </ul>
+      <button type="button" class="btn btn-primary">Login</button>
+      <button type="button" class="btn btn-success">Register</button>
 
       <ul class="nav navbar-nav navbar-right acme-navbar-text">
         <li>Application was created {{ vm.relativeDate }}.</li>
