--- a/src/app/components/register/register.html
+++ b/src/app/components/register/register.html
@@ -33,7 +33,7 @@
                 <label class="sr-only">Password</label>
                     <input type="text" name="password" placeholder="Password..." class="form-last-name form-control"
                     ng-model="main.password" ng-minlength="5" required>
-                    <p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block"> Enter your password (min. 5 letters)</p>
+                    <p ng-show="userForm.password.$invalid && !userForm.password.$pristine" class="help-block"> Enter your password (min. 5 letters)</p>
             </div>
 
             <button type="submit" class="btn"  ng-disabled="userForm.$invalid">Sign me up!</button>
