--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -12,12 +12,12 @@
         <li><a ng-href="#">About</a></li>
         <li><a ng-href="#">Contact</a></li>
       </ul>
-      <button type="button" class="btn btn-primary">Login</button>
-      <button type="button" class="btn btn-success">Register</button>
+      <button type="button" class="btn btn-primary" ng-click="main.showRegisterForm()">Login/Sign up</button>
 
-      <ul class="nav navbar-nav navbar-right acme-navbar-text">
+
+    <!--   <ul class="nav navbar-nav navbar-right acme-navbar-text">
         <li>Application was created {{ vm.relativeDate }}.</li>
-      </ul>
+      </ul> -->
     </div>
   </div>
 </nav>
