--- a/src/app/components/register/register.html
+++ b/src/app/components/register/register.html
@@ -27,7 +27,7 @@
 
                                         <div class="form-group" ng-class="{'has-error': userFormLogin.password.$invalid && !userFormLogin.password.$pristine }">
                                             <label class="sr-only">Password</label>
-                                            <input type="text" name="password" placeholder="Password..." class="form-last-name form-control"
+                                            <input type="{{showpassword ? 'text' : 'password'}}" name="password" placeholder="Password..." class="form-last-name form-control"
                                             ng-model="main.loginPassword" ng-minlength="5" required>
                                             <p ng-show="userFormLogin.password.$invalid && !userFormLogin.password.$pristine" class="help-block"> Enter your password (min. 5 letters)</p>
                                         </div>
@@ -69,9 +69,9 @@
                                             <p ng-show="userForm.email.$invalid && !userForm.email.$pristine" class="help-block"> Enter your email</p>
                                         </div>
 
-                                        <div class="form-group" >
+                                        <div class="form-group" ng-class="{'has-error': userForm.password.$invalid && !userForm.password.$pristine }">
                                             <label class="sr-only">Password</label>
-                                            <input type="text" name="password" placeholder="Password..." class="form-last-name form-control"
+                                            <input type="{{showpassword ? 'text' : 'password'}}" name="password" placeholder="Password..." class="form-last-name form-control"
                                             ng-model="main.password" ng-minlength="5" required>
                                             <p ng-show="userForm.password.$invalid && !userForm.password.$pristine" class="help-block"> Enter your password (min. 5 letters)</p>
                                         </div>
