--- a/src/app/test/test.html
+++ b/src/app/test/test.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
-<html>
-<body>
+    <html>
+        <body>
 
-<h1>My First Heading</h1>
+        <table class="table table-condensed"> <!-- class table-condensed -->
+        <thead><!-- table head-->
+            <tr>
+               <th>Rank</th>
+                <th>Name</th>
+              <th>Points</th>
 
-<p>My first paragraph.</p>
+            </tr>
+        </thead>
 
-</body>
+        <tbody>
+            <tr class="success"><!-- Row 1 , success class-->
+                <td>1</td>
+                <td>Asia</td>
+                <td>30</td>
+
+            </tr>
+            <tr class="danger"><!-- Row 2 , danger class-->
+                <td>2</td>
+                <td>Kasia</td>
+                <td>25</td>
+
+            </tr>
+            <tr class="warning"><!-- Row 3 , warning class-->
+                <td>3</td>
+                <td>Basia</td>
+                <td>20</td>
+
+            </tr>
+      <tr class="info"><!-- Row 4 , information class -->
+                <td>4</td>
+                <td>Maciek</td>
+                <td>115</td>
+
+            </tr>
+      <tr class="active"><!-- Row 5 , active class-->
+                <td>5</td>
+                <td>Tomek</td>
+                <td>10</td>
+
+            </tr>
+        </tbody>
+    </table>
+
+    </body>
 </html>
