Add game functionality - sum up user points from database and result after finishing game + update database and view, show console.log leaderboard on button click

--- a/src/app/components/memoGame/memo.html
+++ b/src/app/components/memoGame/memo.html
@@ -1,13 +1,13 @@
-<div class="container">
+<!-- <div class="container"> -->
 
     <div class="row">
 
-        <div class="col-md-3" ng-show = "main.isLogged()">
+        <div class="col-md-3" ng-show= "main.isLogged">
             <p class = "user-greeting-text"> Witaj {{main.userNameFromDataBase}} </p>
             <p class = "user-greeting-text">Twój email to {{main.emailFromDataBase}} </p>
             <p class = "user-greeting-text">Masz {{main.pointsFromDataBase}} punktów </p> <br>
 
-            <p class="lead">Wybierz kategorię gry</p>
+            <br><p class="lead">Wybierz kategorię gry</p>
                 <div class="list-group">
                     <a href="#" class="list-group-item">Warzywa</a>
                     <a href="#" class="list-group-item">Owoce</a>
@@ -34,4 +34,4 @@
 
     </div>
 
-</div>
+<!-- </div> -->
