--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -13,9 +13,7 @@
         <li><a ng-href="#">Contact</a></li>
       </ul>
       <button type="button" class="btn btn-primary" ng-click="main.showRegisterForm()">Login/Sign up</button>
-      <button type="button" class="btn btn-success" ng-click="main.showPoints()">Show my points</button>
-      <!-- <button type="button" class="btn btn-info" ng-click="main.checkStatus()">logged in?</button> -->
-
+      <button type="button" class="btn btn-warning" ng-click="main.showLeaderBoard()">liderbord</button>
 
     <!--   <ul class="nav navbar-nav navbar-right acme-navbar-text">
         <li>Application was created {{ vm.relativeDate }}.</li>
