--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -12,9 +12,7 @@
         <li><a ng-href="#">About</a></li>
         <li><a ng-href="#">Contact</a></li>
       </ul>
-      <button type="button" class="btn btn-primary" ng-click="main.showRegisterForm()">Login/Sign up</button>
-      <button type="button" class="btn btn-warning" ng-click="main.showLeaderBoard()">liderbord</button>
-
+      <button type="button" class="btn btn-primary sign-button" ng-click="main.showRegisterForm()">Login/Sign up</button>
     <!--   <ul class="nav navbar-nav navbar-right acme-navbar-text">
         <li>Application was created {{ vm.relativeDate }}.</li>
       </ul> -->
