Add cache to fix problems with showing/hiding user panel depend on user status, add new functionality: hide register/login form, when user is logged in, add navbar to leaderboadr page

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-static-top navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="https://github.com/Swiip/generator-gulp-angular">
+      <a class="navbar-brand" href="https://github.com/kinkat/enkiApp">
         <span class="glyphicon glyphicon-home"></span> enkiApp
       </a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
-        <li class="active"><a ng-href="#">Home</a></li>
-        <li><a ng-href="#">About</a></li>
-        <li><a ng-href="#">Contact</a></li>
+        <li class="active"><a ng-href="http://localhost:3000/#/">Home</a></li>
+<!--    <li><a ng-href="#">About</a></li>
+        <li><a ng-href="#">Contact</a></li> -->
       </ul>
       <button type="button" class="btn btn-primary sign-button" ng-click="main.showRegisterForm()">Login/Sign up</button>
     <!--   <ul class="nav navbar-nav navbar-right acme-navbar-text">
