--- a/src/app/test/test.html
+++ b/src/app/test/test.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
     <html ng-app="enkiApp">
         <body>
+            <div>
+        <acme-navbar></acme-navbar>
+    </div>
             <table class = "table table-striped my-table-size">
                 <tr>
                     <th>Name</th>
