--- a/src/app/components/memoGame/memo.html
+++ b/src/app/components/memoGame/memo.html
@@ -2,32 +2,32 @@
 
     <div class="row">
 
-        <div class="col-md-3" ng-show= "main.isLogged">
+        <div class="col-md-3" ng-if="main.showUserInfo">
 
-        <div class = "box-shadow">
-            <p class = " list-group-item user-greeting-text"> Witaj <span class="italic"> {{main.userNameFromDataBase}}</span>  </p>
-            <p class = " list-group-item user-greeting-text">Twój email to <span class="italic">{{main.emailFromDataBase}} </span></p>
-            <p class = " list-group-item user-greeting-text">Masz <span class="italic"> {{main.pointsFromDataBase}} </span> punktów </p>
+            <div class = "box-shadow">
+                <p class = " list-group-item user-greeting-text"> Witaj <span class="italic"> {{main.userNameFromDataBase}}</span>  </p>
+                <p class = " list-group-item user-greeting-text">Twój email: <span class="italic">{{main.emailFromDataBase}} </span></p>
+                <p class = " list-group-item user-greeting-text">Twoje punkty: <span class="italic"> {{main.pointsFromDataBase}} </span> </p>
 
-        </div>
-        <div class = "leaderbord-shadow">
-            <a href="#/test" class="list-group-item user-greeting-text">Leaderboard</a>
-        </div>
+            </div>
+            <div class = "leaderbord-shadow">
+                <a href="#/test" class="list-group-item user-greeting-text">Leaderboard</a>
+            </div>
 
-        <div class = "category-shadow">
-            <p class="category-text">Wybierz kategorię gry</p>
+            <div class = "category-shadow">
+                <p class="category-text">Wybierz grę</p>
 
-                <div class="category-shadow">
-                    <a href="#" class="list-group-item user-greeting-text">Warzywa</a>
-                    <a href="#" class="list-group-item user-greeting-text">Owoce</a>
-                    <a href="#" class="list-group-item user-greeting-text">Zwierzęta</a>
-                </div>
+                    <div class="category-shadow">
+                        <a href="#" class="list-group-item user-greeting-text">Warzywa</a>
+<!--                         <a href="#" class="list-group-item user-greeting-text">Owoce</a> -->
+                        <a href="#" class="list-group-item user-greeting-text">Zwierzęta</a>
+                    </div>
+            </div>
 
-        </div>
+            <div class="clicks-shadow">
+                <p class="list-group-item user-greeting-text">{{main.counter}} clicks</p>
+            </div>
 
-        <div class="clicks-shadow">
-            <p class="list-group-item user-greeting-text">{{main.counter}} clicks</p>
-        </div>
         </div>
 
         <div class="col-md-9">
