--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -13,6 +13,7 @@
         <li><a ng-href="#">Contact</a></li> -->
       </ul>
       <button type="button" class="btn btn-primary sign-button" ng-click="main.showRegisterForm()">Login/Sign up</button>
+        <button type="button" class="btn btn-primary sign-button" ng-click="main.logOut()">Logout</button>
     <!--   <ul class="nav navbar-nav navbar-right acme-navbar-text">
         <li>Application was created {{ vm.relativeDate }}.</li>
       </ul> -->
