--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -8,8 +8,11 @@
         <enki-register></enki-register>
     </div>
 
-    <div>
-        <memory-game></memory-game>
+    <div ng-show=main.toggleGameValue>
+        <memory-game ></memory-game>
+    </div>
+    <div ng-show=main.toggleAnimalGameValue>
+        <memory-animal-game></memory-animal-game>
     </div>
 
 
