--- a/src/app/leaderboard/leaderboard.html
+++ b/src/app/leaderboard/leaderboard.html
@@ -1,26 +1,26 @@
-<!DOCTYPE html>
-    <html ng-app="enkiApp">
-        <body>
+
             <div>
-        <acme-navbar></acme-navbar>
-    </div>
+                <acme-navbar></acme-navbar>
+            </div>
+
+            <div>
+                <enki-register></enki-register>
+            </div>
             <table class="table-style table table-striped my-table-size leaderbord-shadow">
                 <tr class="user-greeting-text">
                     <th>Name</th>
                     <th>Points</th>
                 </tr>
 
-                <tr class="user-greeting-text" ng-repeat="user in main.filteredUsers">
+                <tr class="user-greeting-text" ng-repeat="user in main.users | orderBy: '-points'">
                     <td> {{ user.name }}</td>
                     <td> {{user.points}}</td>
-
                 </tr>
 
             </table>
+<!--
+            <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script> -->
+            <!-- AngularFire -->
+<!--             <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
 
-    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
-    <!-- AngularFire -->
-    <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
-
-    </body>
-</html>
+  -->
