Add game controller, separated user panel and game window, second game currently doesn't work

--- a/src/app/components/memoGame/memo.html
+++ b/src/app/components/memoGame/memo.html
@@ -1,49 +1,14 @@
-<!-- <div class="container"> -->
+<div class="col-md-9">
 
-    <div class="row">
+    <div class="jumbotron my-jumbotron">
 
-        <div class="col-md-3" ng-if="main.showUserInfo">
+        <p id = "press-button-p"> Wanna fruits salat? Good luck! Press play to start game </p>
 
-            <div class = "box-shadow">
-                <p class = " list-group-item user-greeting-text"> Hello <span class="italic"> {{main.userNameFromDataBase}}</span>  </p>
-                <p class = " list-group-item user-greeting-text">Your email: <span class="italic">{{main.emailFromDataBase}} </span></p>
-                <p class = " list-group-item user-greeting-text">Your points: <span class="italic"> {{main.pointsFromDataBase}} </span> </p>
+            <div class="container">
+                <img width="100px" ng-src="assets/images/{{ card.backPic}}" alt="{{ card.title }}" class="{{ card.class }}" ng-repeat="card in memoCtrl.allCards"  ng-click="memoCtrl.clickCard(card)">
 
+                <img width="50px" ng-src="assets/images/play.png" class = "play-position" ng-click="memoCtrl.playGame()">
             </div>
-            <div class = "leaderbord-shadow">
-                <a href="#/leaderboard" class="list-group-item user-greeting-text">Leaderboard</a>
-            </div>
-
-            <div class = "category-shadow">
-                <p class="category-text">Games</p>
-
-                    <div class="category-shadow">
-                        <button class="list-group-item user-greeting-text" ng-click ="main.showCards()">Fruits</button>
-                        <button class="list-group-item user-greeting-text" ng-click ="main.showAnimalCards()">Hello kitty</button>
-                    </div>
-            </div>
-
-            <div class="clicks-shadow">
-                <p class="list-group-item user-greeting-text">{{main.counter}} clicks</p>
-            </div>
-
-        </div>
-
-        <div class="col-md-9">
-
-            <div class="jumbotron my-jumbotron">
-
-                <p id = "press-button-p"> Wanna fruits salat? Good luck! Press play to start game </p>
-
-                <div class="container">
-                <img width="100px" ng-src="assets/images/{{ card.backPic}}" alt="{{ card.title }}" class="{{ card.class }}" ng-repeat="card in main.allCards"  ng-click="main.clickCard(card)">
-
-
-
-                <img width="50px" ng-src="assets/images/play.png" class = "play-position" ng-click="main.playGame()">
-            </div>
-        </div>
-
     </div>
+</div>
 
-<!-- </div> -->
