Refactoring: sign up and sign in works, minor bugs in hiding/showing e.g. logout button and other features depend on authorization status

--- a/src/app/components/userPanel/leftPanel.html
+++ b/src/app/components/userPanel/leftPanel.html
@@ -1,9 +1,9 @@
  <div class="col-md-3">
 
     <div class = "box-shadow">
-        <p class = " list-group-item user-greeting-text"> Hello <span class="italic"> {{main.userNameFromDataBase}}</span>  </p>
-        <p class = " list-group-item user-greeting-text">Your email: <span class="italic">{{main.emailFromDataBase}} </span></p>
-        <p class = " list-group-item user-greeting-text">Your points: <span class="italic"> {{main.pointsFromDataBase}} </span> </p>
+        <p class = " list-group-item user-greeting-text"> Hello <span class="italic"> {{LeftPanelCtrl.userInfo.userNameFromDataBase}}</span>  </p>
+        <p class = " list-group-item user-greeting-text">Your email: <span class="italic">{{LeftPanelCtrl.userInfo.emailFromDataBase}} </span></p>
+        <p class = " list-group-item user-greeting-text">Your points: <span class="italic"> {{LeftPanelCtrl.userInfo.pointsFromDataBase}} </span> </p>
 
     </div>
     <div class = "leaderbord-shadow">
