Add 2 deck of cards and to levels of games with random choice of cards and form to submit comments to firebase (no css, no reading comments yet)

--- a/src/app/components/memoGame/gamePanel.html
+++ b/src/app/components/memoGame/gamePanel.html
@@ -12,8 +12,11 @@
         <enki-register></enki-register>
     </div>
 
-    <div ng-show=memoCtrl.toggleGameValue>
+    <div>
         <memory-game ></memory-game>
+    </div>
+    <div>
+        <comment-panel></comment-panel>
     </div>
 </div>
 
